# unibot-rs

./: .env-example  Cargo.toml  README.md
src/: constants.rs  env_store.rs  main.rs  router.rs
src/utils/: client.rs  contract_abi.rs  mod.rs  univ2.rs
