[package]
name = "unibot-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
ethers = { version = "2.0.7", features = ["abigen", "rustls", "ws"] }
tokio = { version = "1.20.1", features = ["full"] }
eyre = { version = "0.6.8"}
sha3 = { version = "0.10.6"}
hex = "0.4.3"
log = "0.4.19"
env_logger = "0.10.0"
